# tic-tac-toe

./: CMakeLists.txt  README.md  run.sh
design/: naughts-and-crosses.xd
src/: board.cpp  board.hpp  console_game.cpp  game.cpp  game.hpp  gui_game.cpp  main.cpp
src/game/: board.cpp  board.hpp  game.cpp  game.hpp
src/gui/: gui.cpp  gui.hpp
